<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:inputType="textEmailAddress"
        android:layout_marginEnd="@dimen/dimen_25dp"
        android:hint="@string/email_text" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/dimen_15dp"
        android:layout_marginEnd="@dimen/dimen_25dp"
        android:hint="@string/password_text" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:layout_marginEnd="@dimen/dimen_25dp"
        android:background="@color/colorOrange"
        android:text="@string/login_text"
        android:textColor="@color/colorWhite" />

    <TextView
        android:id="@+id/tv_open_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_15dp"
        android:gravity="center"
        android:padding="@dimen/dimen_8dp"
        android:text="@string/dnt_have_an_acc_text" />
</LinearLayout>